change zwyuan email

--- a/social-media/index.html
+++ b/social-media/index.html
@@ -42,7 +42,7 @@ description:
 
             <p>电话： <a href="tel:+025=89680538">+025-89680538</a><br>
             传真： +025-89680532<br>
-            Email：<a href='mailto:zwyuangroup@gmail.com'>zwyuangroup@gmail.com</a><br></p><p>
+            Email：<a href='mailto:zwyuangroup@gmail.com'>yuanzw@nju.edu.cn</a><br></p><p>
             或者通过右边地址给我们寄邮件：<br></p>
 
                               </div>
